--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Destination Server Experience</h1>
+        <h1>Destination Server</h1>
         <section>
             <h2>Get all Destinations</h2>
             <p><a href="/api/dest">Destination List</a></p>
