--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Destination Server</title>
+        <title>Travel API</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Destination Server</h1>
+        <h1>Travel API</h1>
         <section>
             <h2>Get all Destinations</h2>
             <p><a href="/api/dest">Destination List</a></p>
+        </section>
+        <section>
+            <h2>Get all Blogs</h2>
+            <p><a href="/api/blogs">Blogs List</a></p>
         </section>
     </body>
 </html>
